# khmer-tokenizer

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  model.yml  release.yml
bench/: Cargo.toml
bench/benches/: segment.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: ATTRIBUTION.md  Cargo.toml
core/src/: dict.supplement.txt  dict.txt  hmm.rs  kcc.rs  lib.rs  normalize.rs  strategy.rs  tagger.rs  trie.rs  viterbi.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  LEARNING.md  RESEARCH-2.md  RESEARCH-3.md  RESEARCH.md  ROADMAP.md  index.html
docs/pkg/: LICENSE-APACHE  README.md  kh_tokenizer.d.ts  kh_tokenizer_bg.wasm  kh_tokenizer_bg.wasm.d.ts  package.json
docs/playground/: index.html
docs/playground/pkg/: kh_tokenizer.js  kh_tokenizer_bg.wasm
eval/: Cargo.toml
eval/src/: corpus.rs  freq.rs  hmm.rs  kh10000b.rs  lib.rs  metrics.rs  tagger.rs
eval/tests/: regression.rs
eval/tests/fixtures/: regression.word
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: normalize.rs  segment.rs  split_kcc.rs
models/: README.md
py/: Cargo.toml  README.md  pyproject.toml
py/src/: lib.rs
py/tests/: test_tokenizer.py
wasm/: Cargo.toml  README.md  prepare-npm-pkg.js
wasm/src/: lib.rs
wasm/tests/: node.rs
xtask/: Cargo.toml
xtask/src/: dict.rs  download.rs  main.rs  report.rs
