[workspace]
resolver = "2"
members = ["core", "cli", "eval", "xtask"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Alujack/khmer-tokenizer"
authors = ["Yoeurn Yan <yoeurn.yan.dev@gmail.com>"]

# Optimize release builds for the small, hot segmentation loop.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
