[package]
name = "khmer-tokenizer-cli"
description = "Command-line Khmer word segmenter (installs the `khmer-tokenizer` binary)."
keywords = ["khmer", "nlp", "tokenizer", "segmentation", "cli", "khmerTokenizer", "khmer-tokenizer"]
categories = ["text-processing", "command-line-utilities"]
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "khmer-tokenizer"
path = "src/main.rs"

[dependencies]
# `version` is required for crates.io publishing; `path` keeps local builds
# using the workspace copy.
khmer-tokenizer-core = { path = "../core", version = "0.2.2" }
