[package]
name = "khmer-tokenizer-py"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Alujack/khmer-tokenizer"
authors = ["Yoeurn Yan <yoeurn.yan.dev@gmail.com>"]
# Distributed via PyPI (maturin), not crates.io.
publish = false

[lib]
# The importable Python module name: `import khmer_tokenizer`.
name = "khmer_tokenizer"
crate-type = ["cdylib"]

[dependencies]
khmer-tokenizer-core = { path = "../core", version = "0.1.0" }
# abi3-py39: one wheel works on every CPython >= 3.9.
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }

# Deliberately detached from the parent workspace: the root workspace (core,
# cli, eval, xtask) stays zero-third-party-dependency and its CI needs no
# Python toolchain; this crate is built by maturin instead.
[workspace]
