[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "khmer-tokenizer"
description = "Fast, dependency-free Khmer word segmentation (Rust core with Python bindings)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
authors = [{ name = "Yoeurn Yan", email = "yoeurn.yan.dev@gmail.com" }]
keywords = ["khmer", "nlp", "tokenizer", "segmentation", "cambodia"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Khmer",
]
# Version comes from Cargo.toml (maturin reads it).
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/Alujack/khmer-tokenizer"
Documentation = "https://docs.rs/khmer-tokenizer-core"

[tool.maturin]
features = ["pyo3/extension-module"]
