# The WASM bindings live OUTSIDE the Cargo workspace (note the empty
# [workspace] table at the bottom), for the same reason as py/: the
# core/cli/eval/xtask workspace stays zero-third-party-dependency, while
# this crate needs wasm-bindgen. Built with `wasm-pack build wasm` and
# published to npm as `kh-tokenizer` (the crate name becomes the npm
# package name), never to crates.io (`publish = false`).
#
# Why not `khmer-tokenizer` like PyPI? npm's typosquat rule rejects it as
# "too similar to existing package khmertokenizer" (someone else's 2023
# package), so the npm name is kh-tokenizer instead.

[package]
name = "kh-tokenizer"
version = "0.2.0"
edition = "2021"
description = "Fast, dependency-free Khmer word segmentation (Rust core compiled to WebAssembly)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Alujack/khmer-tokenizer"
authors = ["Yoeurn Yan <yoeurn.yan.dev@gmail.com>"]
publish = false # npm-only; the Rust library is khmer-tokenizer-core on crates.io

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
khmer-tokenizer-core = { path = "../core", version = "0.2.0" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Size over speed: this ships to browsers.
opt-level = "s"
lto = true

[workspace]
