[package]
name = "xtask"
description = "Development tooling for khmer-tokenizer (corpus download, evaluation)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
khmer-tokenizer-core = { path = "../core" }
khmer-tokenizer-eval = { path = "../eval" }
